--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "gulpfile.js",
   "dependencies": {},
   "devDependencies": {
+    "argv": "0.0.2",
     "babel-preset-es2015": "^6.9.0",
+    "babelify": "^7.3.0",
     "browser-sync": "^2.12.8",
     "browserify": "^13.0.1",
     "bulk-require": "^0.2.1",
