--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {},
   "devDependencies": {
     "argv": "0.0.2",
+    "babel-eslint": "^7.1.0",
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.3.0",
     "browser-sync": "^2.12.8",
@@ -17,6 +18,7 @@
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.0",
     "gulp-csso": "^2.0.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-iconfont": "^8.0.0",
     "gulp-iconfont-css": "^2.1.0",
     "gulp-jade": "^1.1.0",
